# i3x2ua

./: .dockerignore  .env-example  .gitignore  .gitmodules  .importlinter  CHANGELOG.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Dockerfile  I3X_CONFORMANCE.md  LICENCE  OPENAPI_MIGRATION.md  README.md  THIRD_PARTY_NOTICES.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  i3x-conformance-report.json  openapi.json  pyproject.toml  python-coding-reguirements.md  python-coding-requirements.md  renovate.json  run.py  run_tests.py  tool_overrides.json  tool_overrides.schema.json
.github/: FUNDING.yml  renovate.json
.github/workflows/: FUNDING.yml  dco.yml  docker-image.yml  docker.yml  quality.yml
Agent-Rules/: Anforderungen.md
certs/https-sample/: README.md  fullchain.pem  privkey.pem
certs/opcua-client-sample/: README.md  client-cert.pem  client-key.pem
conf-test-server/: README.md  server.py
docs/: LM_STUDIO_MCP_GUIDE.md  MCP_REFERENCEARCHITECTURE.md  NGINX_CONFIGURATION_REFERENCE.md  OPCUA_CLIENT_DOCUMENTATION.md  OPCUA_I3X_MAPPING_PROFILE.md  OPENTELEMETRY_MCP_GUIDE.md  PRODUCTION_DEPLOYMENT_INDEX.md  PRODUCTION_HTTPS_GUIDE.md  QUICK_REFERENCE.md  VSCODE_MCP_LIVE_DATA_GUIDE.md  architecture.md  cert-manager.sh  deploy.sh  docker-compose.multi-instance.yml  guide.md
docs/adr/: 0001-app-state-strategy.md  0002-cache-invalidation-model.md  0003-mcp-support-policy.md  0004-v1-api-ownership-model.md
frontend/: package-lock.json  package.json  svelte.config.js
frontend/src/: app.css
frontend/src/routes/: +page.svelte
i3x_server/: __init__.py  dependencies.py  errors.py  main.py  mcp.py
i3x_server/api/: __init__.py  action.py  beta.py  data.py  dependencies.py  mcp.py  model.py  namespaces.py  objects.py  objecttypes.py  ua.py  v1.py
i3x_server/api/mcp/: __init__.py  monolithic.py
i3x_server/api/v1/: __init__.py  common_helpers.py  contracts.py  core_routes.py  model_routes.py  monolithic.py  object_helpers.py  object_routes.py  object_value_routes.py  objecttype_helpers.py  objecttype_routes.py  subscription_routes.py
i3x_server/application/: __init__.py  dependencies.py  errors.py
i3x_server/application/ports/: __init__.py  opcua.py  subscription.py
i3x_server/application/services/: __init__.py  mcp.py  model_query.py  object_value.py  (+2 more)
i3x_server/bootstrap/: __init__.py  app_factory.py  dependencies.py
i3x_server/config/: __init__.py  settings.py
i3x_server/domain/: __init__.py  utils.py
i3x_server/model/: __init__.py  builder.py  mapper.py  semantic_profiles.py
i3x_server/opcua/: __init__.py  client.py  contracts.py
i3x_server/prompts/: __init__.py  api.py  registry.py  renderer.py
i3x_server/schemas/: __init__.py  i3x.py  objecttype_schema.py  state.py
i3x_server/subscriptions/: __init__.py  service.py
nginx/: Dockerfile  entrypoint.sh
overrides/: mcp_overrides.json  schema.json
prompts/: analyze_machine_state.json  opcua_diagnostics.json
scripts/: generate_https_dev_cert.py  generate_opcua_client_cert.py
tests/: __init__.py  conftest.py  rest_test_client.py  rest_test_data.json  test_api.py  test_app_dependency_modules.py  test_app_factory_helpers.py  test_beta_helpers.py  test_builder.py  test_dependencies.py  test_domain_utils.py  test_mapper.py  test_mapper_additional.py  test_mcp_helpers.py  test_mcp_monolithic_helpers.py  test_mcp_overrides.py  test_mcp_service.py  test_model_package.py  test_model_query_service.py  test_object_value_service.py  test_objecttype_schema.py  test_opcua_client_helpers.py  test_prompts_modules.py  test_settings.py  test_subscription_app_service.py  test_subscription_service.py  test_ua_api_module.py  test_v1_helpers.py  test_v1_stream_subscription.py  test_version.py  utils.py
tests/features/: .tmp_pytest_out.txt  __init__.py  conftest.py  pytest_report.xml
(+26 files in other folders)
