[project]
name = "i3x2ua"
version = "0.1.0"
description = "i3X REST server backed by OPC UA"
license = { file = "LICENSE" }
requires-python = ">=3.10,<3.13"
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dependencies = [
    "asyncua==2.0.0",
    "fastapi==0.115.0",
    "httptools>=0.6.0",
    "httpx>=0.27.0",
    "jsonschema>=4.23.0",
    "pydantic==2.11.7",
    "pydantic-settings>=2.3.0",
    "uvicorn>=0.30.0,<0.42",
    "wsproto>=1.2.0",
]

[project.urls]
Repository = "https://github.com/AndreasHeine/i3x2ua"
Commercial-Licensing = "https://github.com/sponsors/AndreasHeine"

[project.optional-dependencies]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
]
dev = [
    "httpx>=0.27.0",
    "import-linter>=2.4.0",
    "mypy>=1.10.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["i3x_server*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=i3x_server",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=70",
]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["i3X"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
files = ["i3x_server", "tests", "run.py", "run_tests.py"]
exclude = "(^|[\\/])i3X[\\/]demo[\\/]"
